k8s/msa_zookeeper.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: inventory-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.5.0
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: inventory-service
spec:
  type: ClusterIP
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
